z-index fixes

--- a/wp-content/themes/vantage/partystart.css
+++ b/wp-content/themes/vantage/partystart.css
@@ -1005,6 +1005,9 @@ ul.job_listings li.job_listing a {
     left: 0;
     bottom: 0;
     right: 0;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
 }
 #buddypress #members-list li:hover .member-filter{
     background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
@@ -1018,7 +1021,7 @@ ul.job_listings li.job_listing a {
     z-index:99;
 }
 #members-list li .musikertype {
-
+z-index:100;
     width: 40px;
     position: absolute;
     /* background: #303030 none repeat scroll 0% 0%; */
@@ -1070,6 +1073,7 @@ ul.job_listings li.job_listing a {
     text-decoration: none;
     color:white!important;
     font-weight:600;
+    z-index:100;
 }
 
 
